<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/rockChoice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="16dp"
        android:text="@string/rock"
        app:layout_constraintBottom_toBottomOf="@+id/paperChoice"
        app:layout_constraintEnd_toStartOf="@+id/paperChoice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/paperChoice" />

    <Button
        android:id="@+id/paperChoice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="10dp"
        android:text="@string/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scissorChoice"
        app:layout_constraintStart_toEndOf="@+id/rockChoice"
        app:layout_constraintTop_toBottomOf="@+id/scoreBoard" />

    <Button
        android:id="@+id/scissorChoice"
        android:layout_width="113dp"
        android:layout_height="92dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paperChoice"
        app:layout_constraintTop_toBottomOf="@+id/tv_HumanChoice" />

    <ImageView
        android:id="@+id/iv_ComputerChoice"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/compChoice"
        android:rotation="-90"
        app:layout_constraintBottom_toTopOf="@+id/scoreBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ComputerChoice"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/iv_HumanChoice"
        android:layout_width="138dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/humChoice"
        android:rotation="-90"
        app:layout_constraintBottom_toTopOf="@+id/tv_ComputerChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_HumanChoice"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/tv_ComputerChoice"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:text="@string/computer_choice"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF5722"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/iv_ComputerChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_HumanChoice" />

    <TextView
        android:id="@+id/tv_HumanChoice"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="439dp"
        android:layout_marginTop="28dp"
        android:text="@string/my_choice"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF5722"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/scissorChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreBoard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/Score"
        android:textColor="#FF5722"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/paperChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ComputerChoice" />

</androidx.constraintlayout.widget.ConstraintLayout>